# rlai

./: .bumpversion.cfg  .flake8  .gitignore  .mypy.ini  LICENSE  README.md  pyproject.toml  rl.ipynb  setup.py  trainer.ipynb
.binder/: apt.txt
.github/workflows/: publish-release.yml  python-package.yml  python-publish.yml  python-tests.yml  run-tests-on-push.yml
docs/: _config.yml  ch_1.md  ch_10.md  ch_13.md  ch_2.md  ch_3.md  ch_4.md  ch_5.md  ch_6.md  ch_8.md  ch_9.md  ch_Actions.md  ch_Agents.md  ch_Diagnostics.md  ch_Environments.md  ch_Feature_Extractors.md  ch_Rewards.md  ch_States.md  ch_Training_and_Running_Agents.md  ch_Value_Estimation.md  cli_guide.md  index.md  jupyterlab_guide.md  links_to_code.md  model_diagnostics_and_interpretation.md  raspberry_pi.md
docs/case_studies/: acrobot.md  inverted_pendulum.md  lunar_lander_continuous.md  mountain_car.md  mountain_car_continuous.md  mujoco_swimming_worm.md  mujoco_swimming_worm_pooled.md  robocode.md
docs/case_studies/mountain-car-continuous-figs/: beta-dist.py
hooks/: pre-commit
jupyter/: trainer.ipynb
jupyter/commands/: robocode  robocode-aiming  robocode-move  robocode.rlai  sgd-cartpole  sgd-cartpole.rlai  tabular-gridworld  tabular-gridworld.rlai
run_configurations/: Acrobat resume train.run.xml  Acrobat run.run.xml  Acrobat train.run.xml  CartPole resume train FA.run.xml  CartPole resume train.run.xml  CartPole run FA.run.xml  CartPole run.run.xml  CartPole train FA.run.xml  CartPole train.run.xml  Epsilon-greedy with decreasing epsilon, bandit.run.xml  Epsilon-greedy with recency-weighted reward average, nonstationary bandit.run.xml  Epsilon-greedy, nonstationary bandit.run.xml  Figure 2.2_  Epsilon-greedy, bandit.run.xml  Figure 2.3_  Greedy with optimistic initial values and recency-weighted reward average, bandit.run.xml  Figure 2.4_  Upper confidence bound, bandit.run.xml  Figure 2.5_  Preference gradient no baseline, bandit.run.xml  Figure 2.5_  Preference gradient, bandit.run.xml  Generate Docs.run.xml  Gridworld JAX Policy Gradient.run.xml  Gridworld Policy Gradient Baseline.run.xml  Gridworld Policy Gradient.run.xml  Gridworld SGD.run.xml  Inverted Pendulum continuous run FA.run.xml  InvertedPendulum continuous train FA no baseline.run.xml  InvertedPendulum continuous train FA.run.xml  LunarLander continuous resume train FA.run.xml  LunarLander continuous run FA.run.xml  LunarLander continuous train FA.run.xml  LunarLander train.run.xml  Mancala MC.run.xml  Mancala TD.run.xml  MountainCar continuous run FA.run.xml  MountainCar continuous train FA.run.xml  MountainCar resume train.run.xml  MountainCar run.run.xml  MountainCar train.run.xml  Python tests in test.run.xml  Quick run_  Epsilon-greedy, bandit.run.xml  Run Aim_Move FA.run.xml  Run FA.run.xml  (+19 more)
src/rl/: utils.py
src/rl/actions/: __init__.py  base.py
src/rl/agents/: __init__.py  action.py  base.py  epsilon_greedy.py  greedy.py  h_value.py  mdp.py  nonassociative.py  policy.py  q_value.py  upper_confidence_bound.py
src/rl/chapter_2/: bandit.py
src/rl/dynamic_programming/: evaluation.py  policy_evaluation.py  policy_improvement.py  policy_iteration.py  value_iteration.py
src/rl/environments/: __init__.py  bandit.py  base.py  mancala.py  mdp.py  state.py
src/rl/gpi/: improvement.py
src/rl/meta/: README_base.md  __init__.py
src/rl/rewards/: __init__.py
src/rl/runners/: monitor.py  runner.py
src/rl/states/: __init__.py  mdp.py
src/rlai/: meta.py  plot_utils.py  utils.py
src/rlai/actions/: __init__.py
src/rlai/agents/: __init__.py  h_value.py  mdp.py  q_value.py
src/rlai/core/: __init__.py  actions.py  agents.py  policies.py  states.py
src/rlai/environments/: __init__.py  bandit.py  gamblers_problem.py  gridworld.py  gym.py  mancala.py  mdp.py  network.py  openai_gym.py  rest.py  robocode.py  robocode_continuous_action.py
src/rlai/gpi/: __init__.py  improvement.py  utils.py
src/rlai/meta/: README_base.md  __init__.py  index_base.md
src/rlai/models/: __init__.py  feature_extraction.py  (+1 more)
test/rl/: utils_test.py
test/rlai/: utils.py  utils_test.py
trained_agents/acrobat/: acrobat_agent.pickle
trained_agents/mountaincar/: mountaincar_agent.pickle
trained_agents/mountaincar_continuous/: mountaincar_continuous_agent.pickle
trained_agents/robocode/: robot_agent.pickle  robot_agent_aim.pickle  robot_agent_aim_move.pickle  robot_agent_move.pickle
trained_agents/swimmer/: .gitignore  swimmer_pool.sh
(+227 files in other folders)
