[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'rlai'
version = '1.1.0.dev0'
description = 'Reinforcement Learning:  An Introduction'
readme = 'README.md'
authors = [
    'Matthew Gerber <gerber.matthew@gmail.com>'
]
packages = [
    { include = 'rlai', from = 'src'}
]
repository = 'https://github.com/MatthewGerber/rlai'

[tool.poetry.dependencies]
python = '>=3.10'
scipy = '~=1.11'
matplotlib = '~=3.8'
numpy = '~=1.26'
gymnasium = { version = '==1.0.0a2', extras = ['classic-control', 'box2d', 'mujoco'] }
moviepy = '~=1.0'
scikit-learn = '~=1.3'
pandas = '~=2.1'
patsy = '~=0.5'
pyqtgraph = '~=0.13'
tabulate = '~=0.9'
jupyterlab = '~=4.0'
ipython = '~=8.17'
jax = { version = '~=0.4', extras = ['cpu'] }

# can't get Qt6 to compile on raspberry pi. exclude this architecture.
PyQt6 = { version = '~=6.6', markers = 'platform_machine != "aarch64"' }

[tool.poetry.group.dev.dependencies]
pytest = '~=7.4'
pytest-cov = '~=4.1'
pytest-xdist = '~=3.4'
flake8 = '~=6.1'
flake8-annotations = '~=3.0'
flake8-docstrings = '~=1.7'
flake8-rst-docstrings = '~=0.3'
mypy = '~=1.7'
xvfbwrapper = '~=0.2'
coveralls = '~=3.3'
bump2version = '~=1.0'

[tool.poetry.scripts]
rlai = 'rlai.runners.top_level:run'
