[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'rlai'
version = "1.5.0a0"
description = 'Reinforcement Learning:  An Introduction'
readme = 'README.md'
authors = [
    'Matthew Gerber <gerber.matthew@gmail.com>'
]
packages = [
    { include = 'rlai', from = 'src'}
]
repository = 'https://github.com/MatthewGerber/rlai'

[tool.poetry.dependencies]
python = '>=3.10,<3.13'
scipy = '~=1.13'
matplotlib = '~=3.9'
numpy = '~=1.26'
gymnasium = { version = '==1.0.0a2', extras = ['classic-control', 'box2d', 'mujoco'] }
moviepy = '~=1.0'
scikit-learn = '~=1.5'
pandas = '~=2.2'
patsy = '~=0.5'
pyqtgraph = '~=0.13'
tabulate = '~=0.9'
jupyterlab = '~=4.2'
ipython = '~=8.25'
jax = { version = '~=0.4', extras = ['cpu'] }
# can't get Qt6 to compile on raspberry pi. exclude this architecture.
PyQt6 = { version = '~=6.7', markers = 'platform_machine != "aarch64"' }
types-requests = "^2.32.0.20240712"
types-tabulate = "^0.9.0.20240106"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = '~=8.2'
pytest-cov = '~=5.0'
pytest-xdist = '~=3.6'
flake8 = '~=7.0'
flake8-annotations = '~=3.1'
flake8-docstrings = '~=1.7'
flake8-rst-docstrings = '~=0.3'
mypy = '~=1.10'
xvfbwrapper = '~=0.2'
coveralls = '~=4.0'

[tool.pytest.ini_options]
markers = [
    'will_fail:  Marks tests that are expected to fail always.',
    'will_fail_gh:  Marks tests that are expected to fail in the GitHub workflow cloud.'
]

[tool.poetry.scripts]
rlai = 'rlai.runners.top_level:run'
