[build-system]
requires = ['poetry-core']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'rlai'
version = "1.5.0a0"
description = 'Reinforcement Learning:  An Introduction'
readme = 'README.md'
authors = [
    'Matthew Gerber <gerber.matthew@gmail.com>'
]
packages = [
    { include = 'rlai', from = 'src'}
]
repository = 'https://github.com/MatthewGerber/rlai'

[tool.poetry.dependencies]
python = '>=3.11,<3.13'
scipy = '^1.16'
matplotlib = '^3.10'
numpy = '^2.3'
gymnasium = { version = '^1.2', extras = ['classic-control', 'box2d', 'mujoco'] }
moviepy = '^2.2'
scikit-learn = '^1.7'
pandas = '^2.3'
patsy = '^1.0'
pyqtgraph = '^0.13'
tabulate = '^0.9'
jupyterlab = '^4.4'
ipython = '^9.4'
jax = { version = '^0.7', extras = ['cpu'] }
# can't get Qt6 to compile on raspberry pi. exclude this architecture.
PyQt6 = { version = '^6.9', markers = 'platform_machine != "aarch64"' }
types-requests = "^2.32"
types-tabulate = "^0.9"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = '^8.4'
pytest-cov = '^6.2'
pytest-xdist = '^3.8'
flake8 = '^7.3'
flake8-annotations = '^3.1'
flake8-docstrings = '^1.7'
flake8-rst-docstrings = '^0.3'
mypy = '^1.17'
xvfbwrapper = '^0.2'
coveralls = '^4.0'

[tool.pytest.ini_options]
markers = [
    'will_fail:  Marks tests that are expected to fail always.',
    'will_fail_gh:  Marks tests that are expected to fail in the GitHub workflow cloud.'
]

[tool.poetry.scripts]
rlai = 'rlai.runners.top_level:run'
